<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="tk.giesecke.myhomecontrol.MyHomeControl"
	  tools:ignore="AlwaysShowAction">

	<item
		android:id="@+id/action_selAlarm"
		android:orderInCategory="100"
		android:visible="true"
		android:title="@string/action_selAlarm"/>

	<item
		android:id="@+id/action_selWarning"
		android:orderInCategory="100"
		android:visible="false"
		android:title="@string/action_selWarning"/>

	<item
		android:id="@+id/action_locations"
		android:orderInCategory="100"
		android:title="@string/action_location"
		android:visible="false"/>

	<item
		android:id="@+id/action_refresh"
		android:orderInCategory="100"
		android:title="@string/action_refresh"/>

	<item
		android:id="@+id/action_debug"
		android:orderInCategory="100"
		android:title="@string/action_debug"/>

	<item
		android:id="@+id/action_register"
		android:orderInCategory="100"
		android:title="@string/action_register"/>

</menu>
